--- a/signIn.css
+++ b/signIn.css
@@ -9,15 +9,60 @@
     src: url(./Assets/Font/Poppins\ Regular/);
 }
 
+body {
+    background-image: url(./Assets/Images/360_F_780838268_L1hMnG5MewmvNIGtfyTjKZR5BYJOBsh6.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    color: #fff;
+}
+
 /* For the Main */
-#container {
-    width: 40%;
+main {
+    background-color: #ffffff98;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 30px rgba(180, 179, 179, 0.819);
+    width: 70%;
     margin: auto;
-    margin-top: 5%;
+    margin-top: 10px;
+    height: 90vh;
+}
+
+#container {
+    width: 50%;
+    margin: auto;
+    height: 85vh;
+    margin-top: -3px;
+    background-color: #fff;
+    color: #000;
+    padding: 30px;
+    padding-right: 50px;
+    padding-left: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 30px rgba(180, 179, 179, 0.819);
 }
 
 .signin {
-    margin: 40px 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: 20px;
+    margin: 3px 0;
+    font-size: 20px;
+    padding: 3px 10px;
+}
+
+#start {
+    font-size: 20px;
+    padding-left: 8px;
+    padding-top: 15px;
+}
+
+#logo {
+    width: 150px;
+    height: 150px;
 }
 
 /* The Input Elements */
@@ -28,12 +73,14 @@
     gap: 20px;
     width: 100%;
     font-size: 20px;
+    padding: 10px 10px;
 }
 
 .signin-details input {
     height: 40px;
-    background-color: #eceaeaa1;
+    background-color: #edebebc5;
     border: none;
+    width: 100%;
     padding-left: 20px;
 }
 
@@ -53,9 +100,9 @@
     position: absolute;
     width: 50%;
     top: 5px;
-    left: -2px;
+    left: 15px;
     right: 10px;
-    background-color: #0668d8;
+    background-color: #043c7c;
     border-radius: 10px;
     border-color: #0668d8;
     margin-top: 20px;
@@ -84,13 +131,10 @@ footer {
     align-items: center;
     gap: 5px;
     border-radius: 5px;
-    box-shadow: -5px 5px 5px rgba(165, 164, 164, 0.761);
     width: 40%;
-    font-size: 16px;
+    font-size: 10px;
     margin: auto;
-    margin-top: 100px;
-    background-color: #0668d8;
-    color: #fff;
+    color: #000;
     padding: 15px;
 }
 
@@ -98,11 +142,52 @@ footer {
 /* Mobile Responsiveness */
 
 @media only screen and (max-width: 789px) {
+    main {
+        background-color: #ffffff98;
+        padding: 30px;
+        border-radius: 10px;
+        box-shadow: 0px 0px 30px rgba(180, 179, 179, 0.819);
+        width: 100%;
+        margin: auto;
+        height: 90vh;
+    }
 
     #container {
         width: 70%;
         margin: auto;
         margin-top: 15%;
+        height: 75vh;
+    }
+
+    .signin {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        gap: 5px;
+        margin: 3px 0;
+        font-size: 8px;
+        padding: 50px 10px;
+    }
+
+    #start {
+        font-size: 10px;
+        padding-left: 3px;
+        padding-top: 15px;
+    }
+
+    #logo {
+        width: 90px;
+        height: 90px;
+    }
+
+    .signin-details {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        width: 100%;
+        font-size: 12px;
+        padding: 10px 10px;
     }
 
     #btn {
@@ -111,7 +196,7 @@ footer {
         top: 5px;
         left: 10px;
         right: 10px;
-        background-color: #0668d8;
+        background-color: #043c7c;
         border-radius: 10px;
         border-color: #0668d8;
         margin-top: 20px;
